Missed elimination of assertion predicates

XMLWordPrintable

    • b10
    • generic
    • generic

      See https://github.com/openjdk/jdk/blob/fbd15b20878b276ccd41128116f73b91b6d4c159/src/hotspot/share/opto/loopnode.cpp#L4361-L4369

      We delete nodes from a linked list as we iterate over the list. We end up skipping the nodes. Introduced in https://bugs.openjdk.org/browse/JDK-8305637.

            Assignee:
            Joshua Cao
            Reporter:
            Joshua Cao
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: