8325451: Missed elimination of assertion predicates